--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,19 +11,25 @@
   line-height: 100%;
   color: #0f0e08;
 
+  transition: 0.3s;
+
   &__text {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 80%;
     border: 1px solid #1a5a4c;
+
+    &::before {
+      content: "КВИТКИ";
+    }
   }
 
   &__arrow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #1a5a4c;
+    background-image: url(../images/arrow.png);
+    background-repeat: no-repeat;
+    background-position: center;
     width: 20%;
   }
 
@@ -37,6 +43,30 @@
 
     &__arrow {
       width: 30%;
+    }
+  }
+
+  &:hover {
+    
+    .button__text {
+      font-weight: 200;
+      font-size: 24px;
+      line-height: 100%;
+      border-color: #847b74;
+    }
+
+    .button__text::before {
+      content: "Купити квитки";
+    }
+
+    .button__arrow {
+      width: 20%;
+      background-image: url(../images/Arrow3.png);
+      background-color: #847b74;
+    }
+
+    @include iPad {
+      width: 320px;
     }
   }
 }
