--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,92 +1,1 @@
-.header {
-
-  display: flex;
-
-  &__photo {
-    position: absolute;
-    right: 0;
-    // left: 40%;
-    z-index: -1;
-    background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 300px;
-    width: 320px;
-  }
-
-  &__title {
-    width: 100%;
-    font-weight: bold;
-    font-size: 45px;
-    line-height: 100%;
-    text-align: center;
-
-    margin-bottom: 80px;
-  }
-
-  &__nav {
-    margin-bottom: 250px;
-  }
-
-  @include iPad {
-    height: 384px;
-
-    &__photo {
-      position: absolute;
-      right: 0;
-      z-index: -1;
-      background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 384px;
-      width: 505px;
-    }
-
-    &__title {
-      font-weight: bold;
-      font-size: 72px;
-      line-height: 100%;
-      text-align: unset;
-
-      &--end {
-        -webkit-text-fill-color: transparent;
-        -webkit-text-stroke: 1px black;
-      }
-    }
-
-    &__nav {
-      margin-bottom: 150px;
-    }
-  }
-
-  @include onDesktop {
-    height: 655px;
-
-    &__photo {
-      position: absolute;
-      right: 0;
-      z-index: -1;
-      background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 655px;
-      width: 884px;
-    }
-
-    &__title {
-      margin-left: 213px;
-    }
-
-  }
-
-  @include hd {
-    height: 655px;
-  }
-
-  @include fullHD {
-    height: 655px;
-  }
-}
+//@include
