--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,20 +1,20 @@
 .container {
-  margin: 10px 20px;
-  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
 
   @include iPad {
-    margin: 15px 40px;
+    padding: 0 40px;
   }
 
   @include onDesktop {
-    margin: 15px 60px;
+    padding: 0 60px;
   }
 
   @include hd {
-    margin: 15px 140px;
+    padding: 0 140px;
   }
 
   @include fullHD {
-    margin: 15px 180px;
+    padding: 0 180px;
   }
 }
