--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,12 +1,12 @@
 .menu {
   background-color: #fff;
-  display: flex;
 
   &__list {
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     padding-left: 0;
     margin: 0;
   }
@@ -29,9 +29,15 @@
     &__list {
       display: flex;
       flex-direction: row;
-      gap: 10px;
+      gap: 40px;
       padding-left: 0;
       margin: 0;
+    }
+
+    &__logo-container {
+      display: flex;
+      gap: 40px;
+      align-items: flex-end;
     }
   
     &__link {
