--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -2,11 +2,83 @@
 
   &__photo {
     width: 100%;
+    height: 210px;
+  }
+
+  &__about-photo {
+    width: 100%;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    display: flex;
+    justify-content: space-between;
+
+    &-name {
+      font-weight: 500;
+      font-size: 16px;
+      color: #687480;
+    }
+
+    &-date {
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 150%;
+      color: #1a5a4c;
+    }
+
+    @include iPad {
+      justify-content: unset;
+      gap: 24px;
+    }
+  }
+
+  &__about-title {
+    font-size: 28px;
+    line-height: 100%;
+    color: #0f0e08;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+
+    @include onDesktop {
+      font-size: 36px;
+      gap: 20px;
+    }
+  }
+
+  &__about-content {
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
   }
 
   @include iPad {
     &__photo {
-      width: auto;
+      height: 520px;
     }
+  }
+
+  @include onDesktop {
+    &__photo {
+      height: 520px;
+    }
+
+    &__about {
+      height: 100%;
+      gap: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+}
+
+.orange {
+  height: 10px;
+  width: 10px;
+  background-color: #f14a27;
+
+  @include iPad {
+    height: 15px;
+    width: 15px;
   }
 }
