--- a/src/styles/blocks/button-arrow.scss
+++ b/src/styles/blocks/button-arrow.scss
@@ -9,17 +9,21 @@
   background-repeat: no-repeat;
   background-position: center center;
 
-  @include on-tablet {
-    height: $desktop-button-height;
-    width: $desktop-button-height;
-  }
-
-  transition: background-position 400ms;
-
+  
+  transition: background-position 400ms ease-in-out;
+  
   &:hover {
     background-color: #174d42;
     background-position: 30px;
+    @include on-tablet {
+      background-position: 40px;
+    }
+    
+  }
 
+  @include on-tablet {
+    height: $desktop-button-height;
+    width: $desktop-button-height;
   }
 
   &--orange {
@@ -27,7 +31,7 @@
 
     &:hover {
       background-color: #d84224;
-      background-position: 30px;
+      cursor: pointer;
     }
   }
 }
