--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -25,12 +25,12 @@
     left: 0;
 
     background-image: url(../images/hero.png);
-    background-position: center right;
+    background-position: right top;
     background-size: cover;
 
     @include on-tablet {
       left: initial;
-
+      
       height: $header-tablt-hight;
 
       // implement the max-width (doesnt have to overflow container line)
