--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -36,6 +36,10 @@
       color: #fff;
       text-align: center;
       margin-bottom: 20px;
+
+      &:hover {
+        color: #eee;
+      }
     }
   }
 }
