--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,12 @@ p {
   background-position: center;
   background-size: cover;
 
+  @media (min-width: 768px) {
+    height: 384px;
+    background-size: 66%;
+    background-position: right;
+  }
+
   &__nav {
     padding-top: 9px;
   }
@@ -81,19 +87,50 @@ p {
   }
 }
 
-.art-museum__name {
-  padding: 20px;
-  font-weight: bold;
-  font-size: 45px;
-  line-height: 100%;
-  text-align: center;
-  color: #000;
+.art-museum {
+  @media (min-width: 768px) {
+    position: absolute;
+    // width: 360px;
+    top: 135px;
+    left: 34px;
+  }
+
+  &__name {
+    padding: 20px;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 100%;
+    text-align: center;
+    color: #000;
+  
+    @media (min-width: 768px) {
+      font-weight: bold;
+      font-size: 55px;
+      line-height: 100%;
+      color: #000;
+      text-align: left;
+      padding: 0 0 40px;
+
+    }
+  }
+
+  &__span {
+    @media (min-width: 768px) {
+      -webkit-text-stroke: 1.5px #000;
+      color: transparent;
+    }
+  }
 }
 
 .button {
   display: flex;
   justify-content: center;
   padding: 0 20px 70px;
+
+  @media (min-width: 768px) {
+    justify-content: start;
+    padding: 0;
+  }
 
   &--email {
     padding: 0;
@@ -112,6 +149,11 @@ p {
     font-size: 16px;
     line-height: 100%;
     color: #0f0e08;
+
+    @media (min-width: 768px) {
+      width: 150px;
+      height: 70px;
+    }
 
     &--email {
       background-color: #fff;
@@ -133,6 +175,11 @@ p {
     height: 50px;
     background-color: #1a5a4c;
 
+    @media (min-width: 768px) {
+      width: 70px;
+      height: 70px;
+    }
+
     &--email {
       background-color: #f14a27;
     }
@@ -150,6 +197,10 @@ p {
 .relevant-events {
   padding: 0 20px;
 
+  @media (min-width: 768px) {
+    padding: 0 34px;
+  }
+
   &__name {
     font-weight: bold;
     font-size: 36px;
@@ -157,6 +208,14 @@ p {
     text-align: center;
     color: #0f0e08;
     padding-bottom: 40px;
+
+    @media (min-width: 768px) {
+      padding: 90px 0 50px;
+      text-align: left;
+      font-weight: bold;
+      font-size: 48px;
+      line-height: 100%;
+    }
   }
 
   &__block {
@@ -164,9 +223,14 @@ p {
   }
 
   &__img {
+    display: block;
     height: 210px;
     width: 100%;
     object-fit: cover;
+
+    @media (min-width: 768px) {
+      height: 520px;
+    }
   }
 
   &__exb {
@@ -174,6 +238,12 @@ p {
     justify-content: space-between;
     align-items: center;
     padding: 15px 0 10px;
+
+    @media (min-width: 768px) {
+      justify-content: start;
+      gap: 26px;
+      padding: 34px 0;
+    }
   }
 
   &__left {
@@ -202,6 +272,13 @@ p {
     color: #0f0e08;
     padding-bottom: 10px;
 
+    @media (min-width: 768px) {
+      max-width: 370px;
+      font-size: 36px;
+      line-height: 100%;
+      padding-bottom: 15px;
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -211,6 +288,11 @@ p {
       right: 5px;
       top: 25%;
       background-color: #f14a27;
+
+      @media (min-width: 768px) {
+        width: 15px;
+        height: 15px;
+      }
     }
   }
 
@@ -222,6 +304,15 @@ p {
     line-height: 150%;
     color: #4e4e4e;
     padding-bottom: 60px;
+
+    @media (min-width: 768px) {
+      max-width: 370px;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 150%;
+    }
   }
 }
 
@@ -231,6 +322,12 @@ p {
     height: 210px;
     width: 100%;
     object-fit: fill;
+
+    @media (min-width: 768px) {
+      min-width: 700px;
+      height: 390px;
+      padding: 0 34px;
+    }
   }
 
   &__lecture {
@@ -242,6 +339,12 @@ p {
     background-color: #fff;
     padding: 25px 21px 34px;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @media (min-width: 768px) {
+      width: 570px;
+      height: 204px;
+      padding: 45px 100px 50px;
+    }
   }
 
   &__block {
@@ -275,6 +378,11 @@ p {
     line-height: 100%;
     text-align: center;
     color: #0f0e08;
+
+    @media (min-width: 768px) {
+      text-align: left;
+      padding-bottom: 50px;
+    }
   }
 }
 
