--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -116,7 +116,7 @@
         display: block;
         height: 1px;
         width: 70px;
-        background-color: #1a5a4c;
+        background-color: $green-color;
       }
     }
   }
