--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -83,7 +83,7 @@
     transition: 0.3s;
     
     &:hover {
-      text-shadow: 1px 1px 2px #1a5a4c;
+      text-shadow: 1px 1px 2px $green-color;
     }
   }
 
@@ -108,7 +108,7 @@
     transition: 0.3s;
     
     &:hover {
-      text-shadow: 1px 1px 2px #1a5a4c;
+      text-shadow: 1px 1px 2px $green-color;
     }
   }
 
@@ -116,7 +116,7 @@
     position: relative;
     margin-top: 70px;
     height: 1px;
-    background-color: rgba(26, 90, 76, 0.5);
+    background-color: $dark-green-color;
 
     @include tablet {
       margin-top: 46px;
@@ -136,7 +136,7 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    border: 1px solid rgba(26, 90, 76, 0.5);
+    border: 1px solid $dark-green-color;
 
     background-image: url("../images/arrow-footer.svg");
     background-repeat: no-repeat;
@@ -145,7 +145,7 @@
     transition: 0.3s;
     
     &:hover {
-      background-color: rgba(26, 90, 76, 0.5);
+      background-color: $dark-green-color;
     }
 
     @include biggerScreen {
