--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -10,7 +10,7 @@
     padding: 10px;
     margin-left: calc(50% - var(--container-width) / 2);
     transform: translateY(-40%);
-    background: #fff;
+    background: $white-color;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include biggerScreen {
@@ -40,7 +40,7 @@
 
   &__time {
     line-height: 150%;
-    color: #1a5a4c;
+    color: $green-color;
   }
 
   &__cover-name {
