--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -6,16 +6,9 @@
 
   height: 300px;
   width: 100%;
-  transform: translateY(-110%);
-  z-index: 5;
 
-  background-color: #fff;
+  background-color: $white-color;
   box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-  transition: transform 0.5s;
-
-  &:target {
-    transform: translateY(0);
-  }
 
   @include tablet {
     height: 100px;
@@ -69,7 +62,7 @@
     transition: 0.3s;
     
     &:hover {
-      text-shadow: 1px 1px 2px #1a5a4c;
+      text-shadow: 1px 1px 2px $green-color;
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     }
 
