--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -21,6 +21,16 @@
     }
   }
 
+  &__nav {
+    transform: translateY(-110%);
+    z-index: 5;
+    transition: transform 0.5s;
+
+    &:target {
+      transform: translateY(0);
+    }
+  }
+
   &__art-museum {
     margin: 250px 0 70px;
 
