--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -36,7 +36,7 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 100%;
-    color: #fff;
+    color: $white-color;
 
     @include biggerScreen {
       font-size: 48px;
@@ -50,7 +50,7 @@
     font-size: 18px;
     line-height: 150%;
     text-align: center;
-    color: #fff;
+    color: $white-color;
 
     @include biggerScreen {
       margin-bottom: 66px;
@@ -67,7 +67,7 @@
     width: 233px;
     height: 50px;
     padding: 18px 0 18px 31px;
-    background: #fff;
+    background: $white-color;
     border: none;
     outline: none;
 
@@ -103,7 +103,7 @@
 
     border: none;
     outline: none;
-    background-color: #f14a27;
+    background-color: $orange-color;
     cursor: pointer;
 
     @include biggerScreen {
