--- a/src/styles/blocks/art-museum-button.scss
+++ b/src/styles/blocks/art-museum-button.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   width: calc(100% - 40px);
   height: 50px;
-  border: 1px solid #1a5a4c;
   color: #0f0e08;
   text-decoration: none;
 
@@ -25,6 +24,8 @@
     font-size: 16px;
     line-height: 100%;
     text-transform: uppercase;
+
+    border: 1px solid #1a5a4c;
   }
 
   &__arrow {
@@ -33,7 +34,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1a5a4c;
+    background-color: $green-color;
     transition: 0.5s;
   }
 
