--- a/src/styles/blocks/events-description.scss
+++ b/src/styles/blocks/events-description.scss
@@ -1,5 +1,6 @@
 .events-description {
   width: 100%;
+
   @include laptop {
     padding-top: 50px;
   }
@@ -22,7 +23,7 @@
 
   &__time {
     line-height: 150%;
-    color: #1a5a4c;
+    color: $green-color;
   }
 
   &__cover-name {
@@ -44,7 +45,7 @@
       height: 10px;
       width: 10px;
       transform: translate(100%,100%);
-      background-color: #f14a27;
+      background-color: $orange-color;
 
       @include biggerScreen {
         transform: translate(100%,50%);
