--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -32,7 +32,7 @@
 
     .slick-active {
       button {
-        background-color: #1a5a4c;
+        background-color: $green-color;
       }
     }
   }
