--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .page {
   margin: 0;
-  background: $c-gray;
+  // background: $c-gray;
   box-sizing: border-box;
 
   &__menu {
