--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,4 +11,4 @@
 @import "./blocks/button.scss";
 @import "./blocks/section.scss";
 @import "./blocks/place.scss";
-@import "./blocks/head.scss"
+@import "./blocks/subscribe.scss";
