--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,1 +1,84 @@
-//@include
+.header {
+  background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  min-width: 300px;
+
+  &__teleport {
+    position: absolute;
+    top: 70%;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+    text-decoration: none;
+
+    transform: rotate(-90deg);
+
+    &::before {
+      content: "";
+      height: 1px;
+      width: 70px;
+      background-color: #687480;
+    }
+  }
+
+  &__nav {
+    margin-bottom: 250px;
+  }
+
+  &__title {
+    display: block;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 100%;
+    text-align: center;
+  }
+
+  &__button {
+    display: block;
+  }
+
+  @include iPad {
+    height: 384px;
+    background-position: top right;
+    background-size: 60%;
+
+    
+
+    &__nav {
+      margin-bottom: 0;
+    }
+
+    &__title {
+      position: absolute;
+      right: 60%;
+      font-size: 55px;
+      text-align: unset;
+
+      &--end {
+        position: absolute;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px black;
+      }
+    }
+
+    &__button {
+      position: absolute;
+      top: 30%;
+      right: 65%;
+    }
+  }
+
+  @include onDesktop {
+    height: 655px;
+
+    &__title {
+      font-size: 72px;
+    }
+    &__button {
+      top: 60%;
+    }
+  }
+}
