--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,11 +5,10 @@
 
   &--menu {
     background: url(../images/menu.svg) no-repeat center;
+    transition: transform 0.3s;
 
     &:hover {
-      background-image: url(../images/menu-hover.png);
-      background-size: contain;
-      transform: rotate(180deg);
+      transform: scale(1.1);
     }
   }
 
