--- a/src/styles/blocks/link.scss
+++ b/src/styles/blocks/link.scss
@@ -1,4 +1,12 @@
 .link {
   text-transform: uppercase;
   text-decoration: none;
+
+  &--footer {
+    text-transform: initial;
+
+    &:hover {
+      box-shadow: 0 0 10px #efefef;
+    }
+  }
 }
