--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,13 +19,15 @@
     flex-direction: column;
     align-items: center;
     top: 0;
-    left: -100%;
+    left: -102%;
     font-size: 24px;
     width: 100%;
     text-align: center;
 
     background-color: #fff;
     transition: left 0.8s;
+    border: 1px solid $green-secondary;
+    box-shadow: inset 0 0 10px rgb(212, 212, 212);
 
     z-index: 100;
 
