fix gallery, header, footer

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -22,6 +22,12 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    transition: transform 0.3s;
+    
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.05);
+    }
   }
 
   &__info {
