--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./blocks/grid";
 @import "./blocks/container";
 @import "./blocks/header";
+@import "./blocks/nav";
 @import "./blocks/button";
 @import "./blocks/events";
 @import "./blocks/lecture";
