--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,4 +1,7 @@
 .footer {
+  color: $footer-text-color;
+  font-size: 14px;
+  font-weight: 400;
   &__icon {
     display: flex;
     align-items: center;
@@ -6,14 +9,129 @@
     margin-bottom: 40px;
 
     @include onTablet {
-      margin-bottom: 0;
+      justify-content: flex-start;
+      flex-direction: column;
+    }
+  }
+
+  &__logo {
+    @include onTablet {
+      margin-bottom: 62px;
     }
   }
 
   &__media {
+    display: flex;
+    &-icon {
+      transition: transform 0.3s;
+      &--mr {
+        margin-right: 20px;
+      }
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+  }
 
-    &-icon:first-child {
-      margin-right: 20px;
+  &__info {
+    display: flex;
+    justify-content: space-evenly;
+
+    &-title {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__scheduling {
+    margin-bottom: 30px;
+  }
+
+  &__contacts {
+    &-link {
+      display: inline-block;
+      font-size: 14px;
+      color: inherit;
+      transition: transform 0.3s, color 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+        color: $color-green;
+      }
+    }
+  }
+
+  &__nav {
+    &-item {
+      margin-bottom: 20px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    &-link {
+      display: inline-block;
+      color: inherit;
+      transition: transform 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+        color: $color-green;
+      }
+    }
+  }
+
+  &__line {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    background-color: $color-green;
+    opacity: 0.5;
+
+    @include onDesktop {
+      margin: 0 auto;
+      width: 1px;
+      height: 100%;
+    }
+  }
+
+  &__to-top {
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 1px solid $color-green;
+    border-radius: 50%;
+    background-image: url("../images/arrow-up.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    font-size: 12px;
+    margin-top: 70px;
+
+    @include onTablet {
+      margin-top: 85px;
+    }
+
+    @include onTablet {
+      justify-content: space-between;
+    }
+
+    &-copyright {
+      margin-bottom: 14px;
     }
   }
 }
