--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,8 +1,11 @@
 .gallery {
-  &__wrapper {
-    overflow: hidden;
-    @include onTablet {
-      gap: $galleryGapTab;
+
+  &__desktop {
+    display: none;
+
+    @include onDesktop {
+      display: grid;
+      row-gap: 30px;
     }
   }
 
@@ -11,6 +14,14 @@
     object-position: center;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    transition: transform 0.3s;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.05);
+    }
+
     &--3,
     &--6 {
       display: none;
@@ -22,84 +33,67 @@
       &--6 {
         display: block;
       }
-
-      &--1,
-      &--2,
-      &--3 {
-        height: 600px;
-      }
-
-      &--4,
-      &--5,
-      &--6 {
-        height: 360px;
-      }
     }
+  }
+
+  &__mobile {
+    display: flex;
+    gap: 16px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
 
     @include onDesktop {
-      width: 100%;
-      &--5 {
-        height: 360px;
+      display: none;
+    }
+
+    @include onTablet {
+      gap: 20px;
+    }
+
+    &-img {
+      object-fit: cover;
+      object-position: center;
+      width: 280px;
+      height: 410px;
+      scroll-snap-align: start;
+
+      @include onTablet {
+        width: 340px;
+        height: 543px;
       }
-    }
-  }
-
-  &__slider {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px;
-  }
-}
-
-.slider {
-
-  &__label {
-    display: inline-block;
-    cursor: pointer;
-    position: relative;
-    padding-left: 25px;
-    width: 9px;
-    height: 9px;
-    margin-right: 0;
-    line-height: 18px;
-    
-    user-select: none;
-
-    &::before {
-      content: "";
-      display: inline-block;
-      width: 9px;
-      height: 9px;
-      position: absolute;
-      left: 0;
-      bottom: 1px;
-      background-color: #eee;
-      border-radius: 50%;
-    }
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    &:hover::before {
-      filter: brightness(120%);
     }
   }
 
   &__bulet {
-    width: 9px;
-    height: 9px;
-    background-color: #eee;
-    border-radius: 50%;
-    margin-right: 30px;
-
-    &:last-child {
-      margin-right: 0;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
 
     &:target {
       background-color: $color-green;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+
+    &-link {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background-color: #eee;
+      border-radius: 50%;
+      margin-right: 30px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &:target {
+        background-color: $color-green;
+      }
     }
   }
 }
