--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 2fr);
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
 
   @include onTablet {
@@ -26,15 +26,17 @@
     }
   }
 
-  @include onDesktop {
-    display: grid;
-  }
-
   &__item {
     @for $start from 1 through 16 {
       @for $end from $start through 16 {
         &--#{$start}-#{$end} {
           grid-column: #{$start} / #{$end + 1};
+        }
+        
+        &--mobile-#{$start}-#{$end} {
+          @media(max-width: 768px) {
+            grid-column: #{$start} / #{$end + 1};
+          }
         }
 
         &--tablet-#{$start}-#{$end} {
