--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -86,6 +86,9 @@ p {
 
 .logo {
   text-decoration: none;
+  display: block;
+  width: min-content;
+  margin: 0 auto;
 
   &__txt {
     display: block;
@@ -186,11 +189,11 @@ p {
     color: #0f0e08;
     transition: 0.5s;
 
-    &:hover {
-      color: #fff;
-      background-color: #1a5a4c;
-      cursor: pointer;
-    }
+    // &:hover {
+    //   color: #fff;
+    //   background-color: #1a5a4c;
+    //   cursor: pointer;
+    // }
 
     @media (min-width: 768px) {
       width: 150px;
@@ -217,10 +220,10 @@ p {
     height: 50px;
     background-color: #1a5a4c;
 
-    &:hover {
-      justify-content: start;
-      cursor: pointer;
-    }
+    // &:hover {
+    //   justify-content: start;
+    //   cursor: pointer;
+    // }
 
     @media (min-width: 768px) {
       width: 70px;
@@ -237,6 +240,18 @@ p {
 
     &--email {
       color: #000;
+    }
+  }
+
+  &:hover {
+    .button__tickets {
+      color: #fff;
+      background-color: #1a5a4c;
+      cursor: pointer;
+    }
+    .button__square {
+      justify-content: start;
+      cursor: pointer;
     }
   }
 }
@@ -318,6 +333,22 @@ p {
 
   @media (min-width: 768px) {
     padding: 0 34px;
+  }
+
+  @media (min-width: 1280px) {
+    &__container {
+      display: flex;
+      height: 520px;
+      gap: 130px;
+      margin-bottom: 100px;
+      &--revers {
+        flex-direction: row-reverse;
+      }
+    }
+
+    &__block-column {
+      width: 600px;
+    }
   }
 
   &__name {
@@ -534,14 +565,31 @@ p {
       display: flex;
       gap: 20px;
     }
+
+    @media (min-width: 1280px) {
+      gap: 30px;
+      height: 1000px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
   &__img {
     width: 100%;
     object-fit: cover;
+    transition: 1s;
 
     @media (min-width: 768px) {
       width: 340px;
       height: 543px;
+    }
+
+    @media (min-width: 1280px) {
+      height: 485px;
+      width: 48%;
+      object-fit: contain;
+      &:hover {
+        transform: scale(1.3);
+      }
     }
   }
 
@@ -597,6 +645,22 @@ p {
   &__soc-links {
     display: flex;
     gap: 26px;
+
+    &--fcb {
+      transition: 0.5s;
+    }
+
+    &--ins {
+      transition: 0.5s;
+    }
+
+    &--fcb:hover {
+      transform: scale(1.1);
+    }
+
+    &--ins:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__contacts {
