--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -690,6 +690,18 @@ p {
     background-color: #fff;
     padding: 0;
     margin-bottom: 20px;
+    transition: 0.5s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__svg {
+    transition: 0.5s;
+    &:hover {
+      transform: rotate(360deg);
+    }
   }
 
   &__line {
