--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,7 +11,7 @@
   text-transform: uppercase;
   border: 1px solid $color-green;
   cursor: pointer;
-  transition: background-color 0.3s, width 0.3s;
+  transition: background-color 0.3s;
 
   @include onTablet {
     width: 150px;
@@ -21,7 +21,6 @@
   &:hover {
     color: #fff;
     background-color: #1a5a4c;
-    width: 170px;
   }
 
   &-arrow {
