--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -108,9 +108,14 @@
     background-image: url("../images/arrow-up.svg");
     background-repeat: no-repeat;
     background-position: center;
+    transition: border 0.3s;
 
     @include onTablet {
       display: none;
+    }
+
+    &:hover {
+      border: 2px solid $color-green;
     }
   }
 
