fixed grid blocks

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../styles/utils/reset";
+@import "../styles/utils/vars";
+@import "../styles/utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "../styles/blocks/header.scss";
+@import "../styles/blocks/page.scss";
+@import "../styles/blocks/logo.scss";
+@import "../styles/blocks/conteiner.scss";
+@import "../styles/blocks/menu.scss";
+@import "../styles/blocks/icon.scss";
+@import "../styles/blocks/action.scss";
+@import "../styles/blocks/buy.scss";
+@import "../styles/blocks/grid.scss";
+
+@import "../styles/blocks/art.scss";
+@import "../styles/blocks/events.scss";
+@import "../styles/blocks/art-content.scss";
+@import "../styles/blocks/gallery.scss";
+@import "../styles/blocks/sign-up.scss";
+
+@import "../styles/blocks/footer.scss";
+@import "../styles/blocks/timetable.scss";
