--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
 $c-gray: #eee;
+$blackColor: #000;
+$subTitleColor: #0f0e08;
+$descColor: #4e4e4e;
+$buyColor: #847b74;
+$menuGreyColor: #d7dde3;
+$greenColor: #1a5a4c;
+$boxWidth: 300px;
+$boxHeight: 70px;
