--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,7 +4,6 @@ html {
 
 .page {
   margin: 0;
-  // background: $c-gray;
   box-sizing: border-box;
 
   &__menu {
@@ -18,6 +17,18 @@ html {
 
     &:target {
       transform: translateX(0);
+    }
+  }
+
+  @include iPad {
+    &__header {
+      margin-bottom: 90px;
+    }
+  }
+
+  @include onDesktop {
+    &__header {
+      margin-bottom: 200px;
     }
   }
 }
