--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -12,9 +12,24 @@
   &__photo {
     width: 100%;
     transition: 0.3s;
+    margin-bottom: 20px;
 
     &--actual {
       height: 210px;
+    }
+
+    &-hidden {
+      display: none;
+    }
+
+    &-gallery {
+      width: 100%;
+      transition: 0.3s;
+
+      &:hover {
+        transform: scale(1.03);
+      }
+      margin-bottom: 30px;
     }
 
     &--gallery-1 {
@@ -22,8 +37,9 @@
     }
 
     &--gallery-2 {
-      opacity: 0;
+      display: none;
       height: 360px;
+      margin-bottom: 200px;
     }
 
     &:hover {
@@ -38,6 +54,7 @@
     width: 100%;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     transform: translateY(-25%);
+    margin-bottom: 50px;
   }
 
   &__boat {
@@ -63,6 +80,8 @@
     font-family: "IBM Plex Sans", sans-serif;
     display: flex;
     justify-content: space-between;
+
+    margin-bottom: 15px;
 
     &-name {
       font-weight: 500;
@@ -91,6 +110,8 @@
     gap: 5px;
     align-items: center;
 
+    margin-bottom: 15px;
+
     @include onDesktop {
       font-size: 36px;
       gap: 20px;
@@ -101,6 +122,7 @@
     font-size: 16px;
     line-height: 150%;
     color: #4e4e4e;
+    margin-bottom: 60px;
   }
 
   @include iPad {
@@ -117,16 +139,18 @@
 
   @include onDesktop {
     &__photo {
+      margin-bottom: 100px;
       &--actual {
         height: 520px;
       }
 
       &--gallery-1 {
         height: 600px;
+        display: grid;
       }
 
       &--gallery-2 {
-        opacity: 1;
+        display: grid;
       }
     }
 
@@ -136,9 +160,11 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      // margin-bottom: 150px; 
     }
 
     &__lection {
+      margin-bottom: 150px;
       display: flex;
       flex-direction: column;
       align-items: center;
