--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -1,17 +1,23 @@
 .section {
 
   &__title {
+    display: flex;
+    justify-content: center;
     font-weight: bold;
     font-size: 36px;
     line-height: 100%;
     text-align: center;
     color: #0f0e08;
+    margin-bottom: 40px;
   }
 
   @include iPad {
     &__title {
+      display: block;
       text-align: unset;
       transform: unset;
+      font-size: 48px;
+      margin-bottom: 60px;
     }
   }
 }
