--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "./blocks/section.scss";
 @import "./blocks/place.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
