--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -7,10 +7,15 @@
   padding-top: 55px;
   box-sizing: border-box;
 
+  &__container {
+    display: flex;
+  }
+
   &__email {
     box-sizing: border-box;
     width: 80%;
     height: 50px;
+    font-size: 20px;
 
     &::placeholder {
       font-size: 14px;
@@ -21,7 +26,7 @@
   }
 
   &__button {
-    width: 20px;
+    flex-basis: 20%;
     background-color: #f14a27;
     background-image: url(../images/arrow.png);
     background-position: center;
@@ -47,12 +52,14 @@
     font-size: 48px;
     line-height: 100%;
     color: #fff;
+    margin-bottom: 30px;
   }
 
   &__text {
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     line-height: 150%;
+    margin-bottom: 50px;
     
     color: #fff;
   }
@@ -74,11 +81,26 @@
     height: 550px;
     padding-top: 140px;
 
+    &__container {
+      gap: 24px;
+    }
+
     &__email {
       height: 70px;
+      width: 80%;
+      font-size: 30px;
+    }
+
+    &__title {
+      margin-bottom: 20px;
+    }
+
+    &__text {
+      margin-bottom: 60px;
     }
   
     &__button {
+      flex-basis: unset;
       height: 70px;
       width: 70px;
     }
