finish landing page

--- a/src/styles/icon/icon.scss
+++ b/src/styles/icon/icon.scss
@@ -1,8 +1,35 @@
 .icon {
+  display: inline-block;
   width: 18px;
-  height: 12px;
+  height: 18px;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 2;
+  transition: transform 0.2s linear;
+
+  &:hover {
+    transform: scale(1.7);
+  }
 
   &--menu {
     background-image: url("../images/menu.png");
+
+  }
+
+  &--search {
+    background-image: url("../images/search-icon.svg");
+  }
+
+  &--facebook {
+    width: 12px;
+    height: 24px;
+    margin-right: 26px;
+    background-image: url("../images/facebook-icon.svg");
+  }
+
+  &--instagram {
+    width: 24px;
+    height: 24px;
+    background-image: url("../images/instagram-icon.svg");
   }
 }
