--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,41 @@
 @import "utils";
 @import "fonts";
-@import "typography";
+@import "container/container";
+@import "grid/grid";
+@import "icon/icon";
+@import "logo/logo";
+@import "header/header";
+@import "buy-ticket/buy-ticket";
+@import "navigation-menu/navigation-menu";
+@import "art-museum/art-museum";
+@import "current-events/current-events";
+@import "event-card/event-card";
+@import "lecture-block/lecture-block";
+@import "gallery/gallery";
+@import "subscrie/subscribe";
+@import "footer/footer";
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  font-family: IBMPlexSans, sans-serif;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
