--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,21 @@
-$c-gray: #eee;
+$c-black:rgba(0, 0, 0, 1);
+
+$c-dark-first: rgba(15, 14, 8, 1);
+$c-dark-second:rgba(27, 28, 32, 1);
+
+$c-gray-first: rgba(104, 116, 128, 1);
+$c-gray-second: rgba(78, 78, 78, 1);
+$c-gray-third: rgba(83, 81, 81, 1);
+$c-gray-fourth: rgba(71, 71, 71, 1);
+$c-gray-fifth:rgba(215, 221, 227, 1);
+$c-gray-sixth:rgba(224, 224, 224, 1);
+
+$c-green: rgba(26, 90, 76, 1);
+
+$c-color-brown: rgba(132, 123, 116, 1);
+
+$c-white: rgba(255, 255, 255, 1);
+
+$c-transparent: rgba(0, 0, 0, 0);
+
+$c-red: rgba(241, 74, 39, 1);
