--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,71 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%h1-font-style {
+  font-family: "Montserrat", sans-serif;
+  font-size: 45px;
+  line-height: 55px;
+  font-weight: 700;
+  color: $c-black;
+
+  @include on-tablet {
+    font-size: 55px;
+    line-height: 55px;
+  }
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 72px;
+  }
+}
+%h2-font-style {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 700;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
+%h3-font-style {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  line-height: 28px;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+%logo-font-style {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 700;
+  color: $c-dark-first;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+%font-style-14-21 {
+  font-size: 14px;
+  line-height: 21px;
+}
+%font-style-14-14 {
+  font-size: 14px;
+  line-height: 14px;
+}
+%font-style-16-16 {
+  font-size: 16px;
+  line-height: 16px;
+}
+%font-style-18-18 {
+  font-size: 18px;
+  line-height: 18px;
+}
+%font-style-24-24 {
+  font-size: 24px;
+  line-height: 24px;
 }
