fixed Museum landing

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -18,9 +18,11 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    transition: transform 0.5s linear;
 
     &:hover {
       cursor: pointer;
+      transform: scale(120%);
     }
   }
 
