--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,9 +1,13 @@
 .icon {
   &__cross {
+    object-fit: cover;
+    object-position: center;
+    transition: transform 0.5s linear;
     height: 25px;
 
     &:hover {
       cursor: pointer;
+      transform: scale(110%);
     }
   }
 
@@ -57,5 +61,14 @@
     height: 2px;
     color: $buyColor;
     background-color: $buyColor;
+  }
+
+  &__soc {
+    transition: transform 0.5s linear;
+  
+    &:hover {
+      cursor: pointer;
+      transform: scale(110%);
+    }
   }
 }
