--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -14,7 +14,7 @@
 
   &__icon-wrap {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     margin-bottom: 10px;
   }
@@ -77,31 +77,5 @@
     &:hover {
       transform: scale(110%);
     }
-  }
-
-  &__form {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__search-field {
-    position: relative;
-    line-height: 25px;
-  }
-
-  &__icon {
-    transition: opacity 0.2s linear;
-
-    &--cross {
-      display: flex;
-      right: 0;
-    }
-  }
-
-  &__icon:hover {
-    opacity: 0.6;
-    transform: skale(10%);
   }
 }
