--- a/src/styles/blocks/timetable.scss
+++ b/src/styles/blocks/timetable.scss
@@ -18,10 +18,11 @@
     line-height: 150%;
     color: $subTitleColor;
     text-decoration: none;
+    transition: border-bottom 0.4s linear 0;
 
     &:hover {
       cursor: pointer;
-      opacity: 0.8;
+      border-bottom: 2px solid black;
     }
   }
 }
