--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -17,10 +17,11 @@
     line-height: 100%;
     color: $subTitleColor;
     text-decoration: none;
-    transition: border-bottom 0.4s ease;
+    transition: border-bottom 0.4s linear 0;
 
     &:hover {
       cursor: pointer;
+      border-bottom: 2px solid black;
     }
   }
 }
