fixed screnn width

--- a/src/styles/blocks/sign-up.scss
+++ b/src/styles/blocks/sign-up.scss
@@ -70,12 +70,13 @@
   &__field {
     padding-left: 15px;
     width: 230px;
-    height: 44px;
+    height: 48px;
 
     font-size: 14px;
     line-height: 100%;
     color: $buyColor;
     outline: none;
+    border: none;
   }
 
   &--bot {
