--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,9 @@
   scroll-behavior: smooth;
 
   &__body {
-    margin: 0;
+    position: relative;
+    margin: 0 auto;
+    max-width: 1920px;
   }
 
   &__content {
